--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html {
  margin: 0;
  padding: 0;
  font: 1.5vw Arial;
- background: url("https://oxmc.github.io/UwUBotDiscord.github.io/images/background.png");
+ background: url("../images/background.png");
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
@@ -21,7 +21,7 @@ body {
   padding: 2vw;
 }
 .wave {
- background: url("https://oxmc.github.io/UwUBotDiscord.github.io/images/waves.png");
+ background: url("../images/waves.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
