--- a/css/style.css
+++ b/css/style.css
@@ -86,3 +86,16 @@ left: 0px;
 width: 100%;
 background-color: #233339;
 }
+.cp-text{ color: rgba(0,0,0,.7); text-shadow: 0 1px rgba(255, 255, 255, 0.1);}
+.btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 30px;
+  cursor: pointer;
+  font-size: 20px;
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+
