--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,74 @@
+body {
+  margin: 0;
+  font-size: 28px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+}
+
+#navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+#navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+#navbar a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.content {
+  padding: 16px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky2 {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+
 html {
  margin: 0;
  padding: 0;
  font: 1.5vw Arial;
- background: url("../images/background.png");
+ /*background: url("../images/background.png");
  background-attachment: fixed;
  background-repeat: no-repeat;
- background-size: cover;
+ background-size: cover;*/
  color: white;
  font-size: 1.5vw;
  max-width: 100%;
  overflow-x: hidden;
 }
-body {
-  max-width: 100%;
-  overflow-x: hidden;
-  margin-top: 8vw;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 2vw;
-}
-.wave {
- background: url("../images/waves.png");
- background-position: center;
- background-repeat: no-repeat;
- background-size: cover;
- position: absolute;
- top: 0;
- left: 0;
- width: 100%;
- height: 50%;
- z-index: -1;
-}
+
 .header {
  top: 0;
  left: 0;
@@ -41,6 +78,7 @@ body {
  position: fixed;
  width: 100vw;
 }
+
 .headertext {
 font-weight: 900;
 font-size: 25px;
@@ -51,15 +89,18 @@ text-align: center;
 font-weight: 900;
 font-size: 50px;
 }
+
 .textbold {
 font-weight: 900;
 font-size: 15px;
 }
+
 .textbuttoncenter {
 text-align: center;
 font-weight: 1000;
 font-size: 70px;
 }
+
 .centeredtext {
 text-align: center;
 font-weight: 500;
@@ -76,17 +117,20 @@ font-weight: 500;
   font-size: 16px;
   border-radius: 12px;
 }
+
 .button:hover {
   background-color: #00FFFF;
   color: white;
 }
+
 .section {
 position: absolute;
 left: 0px;
 width: 100%;
 background-color: #233339;
 }
-.cp-text{ color: rgba(0,0,0,.7); text-shadow: 0 1px rgba(255, 255, 255, 0.1);}
+
+/*.cp-text{ color: rgba(0,0,0,.7); text-shadow: 0 1px rgba(255, 255, 255, 0.1);}*/
 .btn {
   background-color: DodgerBlue;
   border: none;
@@ -94,8 +138,62 @@ background-color: #233339;
   padding: 12px 30px;
   cursor: pointer;
   font-size: 20px;
+}
 
 /* Darker background on mouse-over */
 .btn:hover {
   background-color: RoyalBlue;
+}
 
+.center {
+  text-align: center;
+  display: center;
+}
+
+footer {
+  height: auto;
+  color:grey;
+  text-align: center;
+  display: center;
+  text-shadow: 0 1px rgba(255, 255, 255, 0.1);
+  bottom: 0;
+}
+
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader > img {
+    width: 100px;
+}
+
+.loader.hidden {
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.thumb {
+    height: 100px;
+    border: 1px solid black;
+    margin: 10px;
+}
+
+body {
+  background-color: #334165;
+}
